# dircpy

./: .gitignore  Cargo.toml  Changelog.md  README.md  run_bench.sh
.github/workflows/: check_windows.yml  rust.yml  test_linux.yml  test_windows.yml
benches/: copy_rustlang.rs
dest/: lib.rs  tests.rs
src/: lib.rs  tests.rs
