[package]
name = "dircpy"
version = "0.3.10"
authors = ["Johann Woelper <woelper@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Copy directories recursively with flexible options."
repository = "https://github.com/woelper/dircpy/"
keywords = ["copy", "recursive", "filesystem", "file"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["jwalk"]

[dependencies]
walkdir = "2.3.2"
log = "0.4.16"
# rayon = "1.4.0"
jwalk = { version = "0.6.0", optional = true }

[dev-dependencies]
unzip = "0.1.0"
reqwest = { version = "0.11.10", features = ["blocking"] }
env_logger = "0.9.0"
criterion = "0.3.5"

[[bench]]
name = "copy_rustlang"
harness = false
